2007-05-29 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug 5256: replace also the ',' in str_replace in order not avoid replacement of other fields with the same name but from other extensions.
	* fix bug 5397: images could not be uploaded and have not been shown

2007-05-26 Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug 5641: modifications needed to make sr_email_subsribe working again

2007-05-18 Franz Holzinger  <kontakt@fholzinger.com>
	* use first line of plain text emails as the subject
	* when there is already an items array in TCA and also records from a foreign table, then both will be added

2007-05-10 Franz Holzinger  <kontakt@fholzinger.com>
	* use t3lib_htmlmail also for sending of plain text emails
	* fix bugs with invite (see bug #5588)
	* Version 2.5.6 relaunch

2007-05-02 Franz Holzinger  <kontakt@fholzinger.com>
	* Danish backend texts
	* fix bug with not possible image upload
	* Version 2.5.6 relaunch

2007-04-18 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6 relaunch

2007-03-15 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6 relaunch
	* fix bugs caused by restructuring of code

2007-03-09 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6 relaunch
	* more flexform entries
	* fix bugs caused by restructuring of code

2007-03-06 Franz Holzinger  <kontakt@fholzinger.com>
	* some bug fixes due to restructuring

2007-02-28 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6
	* internal restructuring of code into more classes

2007-02-09 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.5 relaunch
	* Fix bug 4056: The comparison of the authorisation code has been wrong.

2007-02-07 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.5 relaunch
	* Fix bug with not considered multiple select fields with text fields. A text string must be allowed as a value in a select box.

2007-01-17 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.5